src/components/Result/index.scss
.result__bg {
  position: fixed;
  top: 0;
  bottom: 0;
  height: auto;
  left: 0;
  right: 0;
  width: auto;
  background-color: rgba(0, 0, 0, 0.15);
}

.result__container {
  z-index: 1;
  position: fixed;
  background-color: #fff;
  border-radius: 10px 10px 0 0;
  left: 0;
  bottom: 0;
  width: 100vw;
  // TODO: delete
  padding: 10px 0;

  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.result__content {
  width: 100%;
  flex: 1 1 0;
  display: flex;
  flex-direction: column;
  // justify-content: center;
  // align-items: center;
  overflow-y: auto;
}

.result__close {
  margin-left: 10px;
}

